<resources>
    <string name="app_name">Enkindle</string>
    <string name="action_settings">Settings</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="start">GOT IT</string>
    <string name="logout">Logout</string>

    <string name="consult">CONSULT FOR MENTORSHIP</string>
    <string name="ask">ASK A QUESTION</string>
    <string name="review">REVIEW YOUR PERFORMANCE</string>
    <string name="test">TAKE A TEST</string>
    <string name="chat">CHAT</string>
    <string name="blog">BLOG</string>
    <string name="search_question">Search For Question</string>
    <string name="search">Search</string>
    <string name="ask_question">Ask</string>
    <string name="read_more">Read more</string>
    <string name="question_title">Question</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_a_member_signup">Not a member? Sign up now.</string>
    <string name="already_registered">Already registered! Login me.</string>

    <string name="slide_1_title">CONSULT FOR MENTORSHIP</string>
    <string name="slide_2_title">ASK A QUESTION</string>
    <string name="slide_3_title">REVIEW YOUR PERFORMANCE</string>
    <string name="slide_4_title">TAKE A TEST</string>

    <string name="login_text">LOGIN</string>
    <string name="register_text">REGISTER</string>
    <string name="signin">Sign In</string>
    <string name="register">Register</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Name</string>
    <string name="class_hint">Class</string>

    <string-array name="class_array">
        <item>Class</item>
        <item>9th</item>
        <item>10th</item>
        <item>11th</item>
        <item>12th</item>
    </string-array>
</resources>
