<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
            <TextView
                style="@style/content_main_textview"
                android:id="@+id/consult"
                android:text="@string/consult"
                android:background="@color/bg_screen1"
                android:onClick="Consult"/>
            <TextView
                style="@style/content_main_textview"
                android:text="@string/ask"
                android:id="@+id/ask"
                android:background="@color/bg_screen2"
                android:onClick="Ask_Question"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
            <TextView
                style="@style/content_main_textview"
                android:text="@string/review"
                android:id="@+id/review"
                android:background="@color/bg_screen3"
                android:onClick="Review"/>
            <TextView
                style="@style/content_main_textview"
                android:text="@string/test"
                android:id="@+id/test"
                android:background="@color/bg_screen4"
                android:onClick="Take_Test"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:text="@string/chat"
            android:padding="@dimen/activity_horizontal_margin"
            android:id="@+id/chat"
            android:background="@drawable/circle_border"
            android:layout_centerInParent="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:onClick="Chat"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blog"
            android:id="@+id/blog"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_margin="8dp"
            android:background="@drawable/border"
            android:onClick="Blog"/>
    </LinearLayout>

</LinearLayout>
