<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/info"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/name_hint"
            android:id="@+id/register_name"
            android:background="@android:color/white"
            android:singleLine="true"
            android:padding="8dp"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@android:color/white">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="8dp"
            android:id="@+id/classes"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/class_spinner"></Spinner>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:background="@android:color/white"
            android:padding="8dp"
            android:singleLine="true"
            android:id="@+id/register_email"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/password_hint"
            android:background="@android:color/white"
            android:padding="8dp"
            android:singleLine="true"
            android:id="@+id/register_password"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:inputType="textPassword"
            android:password="true"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/login"
            android:layout_marginTop="32dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/register"
                android:onClick="Register"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@color/colorAccent"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
